--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
 style.css
-h1 {
-    color: green;
-    border: 1px dotted black;
-  }
-  p {
-    color: magenta;
-  }
+h1 {color: green; border: 1px dotted black;}
+p {color: magenta;}
