--- a/style.css
+++ b/style.css
@@ -1,20 +1,19 @@
-style.css 
-html {
+style.css html {
   scroll-behavior: smooth scroll;
 }
 .container {
-    max-width: 1280px;
-    margin:0 auto;
+  max-width: 1280px;
+  margin: 0 auto;
 }
 .body {
-min-height: 100%;
-max-width: 1280px;
-    margin: 0 auto;
-    padding: 0;
-    display: block;
+  min-height: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0;
+  display: block;
 }
 h2 {
-    text-shadow: 1px 1px lightgrey;
+  text-shadow: 1px 1px lightgrey;
 }
 .header {
   display: block;
@@ -32,7 +31,7 @@ h2 {
   justify-content: space-between;
   color: rgb(32, 3, 53);
   background-image: linear-gradient(#dbfcfa, #f3e9ec);
- }
+}
 .navMenu {
   display: flex;
   flex-direction: column;
@@ -68,7 +67,7 @@ ul {
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 .codeExample {
-    background-color: beige;
+  background-color: beige;
 }
 .footer {
   display: grid;
